agregado formulario para calcular MG1

--- a/index.html
+++ b/index.html
@@ -55,6 +55,29 @@
                     </ul>
                     <button type="submit" id="send2">Calcular</button>
                 </form>
+                <h2>___________________________________________________________________</h2>
+                <div class="header">
+                    <h2 id="formTitle">Calculadora de medidas de desempeño del sistema MG1:</h2>
+                </div>
+                <form name="form3">
+                    <label for="lambda3">Lambda (Velocidad de llegada)</label> <br>
+                    <input id="lambda3" type="number" name="lambda" placeholder="ingrese valor del Lambda"> <br>
+                    <label for="Mu3">Mu (Velocidad de servicio)</label> <br>
+                    <input id="mu3" type="number" name="mu" placeholder="ingrese valor de Mu"><br>
+                    <label for="tita3">(Desviacion estandar)</label> <br>
+                    <input id="tita3" type="number" name="tita3" placeholder="desviacion estandar">
+                    <ul>
+                        <li>Factor de uso del sistema (p): <span id="listRo3" class="spanstyle"></span> </li>
+                        <li>Nro de unidades en el sistema (Ls): <span id="listLs3" class="spanstyle"></span></li>
+                        <li>Tiempo de unidad en el sistema (Ws): <span id="listWs3" class="spanstyle"></span></li>
+                        <li>Nro. promedio de unidades en la cola (Lq): <span id="listLq3" class="spanstyle"></span></li>
+                        <li>Tiempo de espera de una unidad en la cola (Wq): <span id="listWq3" class="spanstyle"></span>
+                        </li>
+                        <li>Probabilidad de que el sistema este vacio (P0): <span id="listP03" class="spanstyle"></span>
+                        </li>
+                    </ul>
+                    <button type="submit" id="send3">Calcular</button>
+                </form>
             </div>
         </div>
     </body>
